<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="22dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/save_location_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:background="@drawable/bg_edit_normal"
        android:gravity="center_vertical"
        android:hint="@string/caption"
        android:maxLines="1"
        android:padding="6dp"
        android:singleLine="true"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_margin="22dp"
        android:background="@drawable/bg_button_selector"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_caption" />

</androidx.constraintlayout.widget.ConstraintLayout>